[package]
name = "governance"
version = "0.1.0"
authors = ["Tommimon <37435103+Tommimon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.29"
nalgebra = "*"
colour = "0.6.0"

solana-client = "1.7.11"
solana-program = "1.7.11"
solana-sdk = "1.7.11"
bincode = "1.3.2"
borsh = "0.9.1"
clap = "2.33.3"
solana-clap-utils = "1.6"
solana-cli-config = "1.6"
spl-token-metadata = { path = "../program", features = [ "no-entrypoint" ] }
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
